[tool.poetry]
name = "pycron"
version = "3.0.0"
description = "Simple cron-like parser, which determines if current datetime matches conditions."
authors = ["Kimmo Huoman <kipenroskaposti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
arrow = "^0.12.0"
coverage = "7.6.1"
coveralls = "^1.2.0"
delorean = "^0.6.0"
flake8 = "^3.8.4"
pendulum = "^1.3.2"
pytz = "^2017.3"
udatetime = "^0.0.17"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
