[tool.poetry]
name = "pycron"
version = "3.1.0"
description = "Simple cron-like parser, which determines if current datetime matches conditions."
authors = ["Kimmo Huoman <kipenroskaposti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[tool.poetry.group.test.dependencies]
arrow = "^1.3.0"
coverage = "^7.6.1"
coveralls = "^4.0.1"
delorean = "^1.0.0"
flake8 = "^7.1.1"
pendulum = "^3.0.0"
pytz = "^2024.2"
udatetime = "^0.0.17"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
